# MediMind

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Result.css  Result.tsx  Upload.css  Upload.tsx
src/: main.py
src/agents/: agents.py
src/api/: __init__.py  routes.py
src/models/: schemas.py
src/services/: analyzer.py  pdf_processor.py
tests/: test_analyzer.py  test_api.py  test_models.py  test_pdf_processor.py
