[project]
name = "myproject"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.16",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "uvicorn>=0.45.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
